--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <br>
                 <p></p> <strong>Proyecto: </strong> sitioProfesional</p>
                 <br>
-                <p></p> <strong>Descripción: </strong> Sitio web destinado a ofrecer servicios de consultoría IT especializados en CRM Salesforse especializados en rubro seguros.</p>
+                <p></p> <strong>Descripción: </strong> Sitio web destinado a ofrecer servicios de consultoría IT  en CRM Salesforse especializados en rubro seguros.</p>
                 <br>
                 <p></p> <strong>Prototipo: </strong> <a href="https://www.figma.com/proto/U7CTSTrUDzvlwAbccDncHo/SitioProfesionalVistaCelular?type=design&node-id=1-2&t=zHN4UBcFnFMXXaUq-1&scaling=scale-down&page-id=0%3A1&mode=design" target="_blank"> Link al Prototipo</a></p>
                 <br>
